<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layoutDirection="ltr"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:id="@+id/layout_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="20sp"
            android:layout_weight="0"
            android:gravity="right" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="name"
            tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck"
            android:inputType="text" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_table2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/surname"
            android:textSize="20sp"
            android:layout_weight="0"
            android:gravity="right" />

        <EditText
            android:id="@+id/editText_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="surname"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_table3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/marks"
            android:textSize="20sp"
            android:layout_weight="0"
            android:gravity="right" />

        <EditText
            android:id="@+id/editText_Marks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="Degree"
            android:inputType="number"
            tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_table4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">


        <TextView
            android:id="@+id/textView_id"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/id"
            android:textSize="20sp"
            android:layout_weight="0"
            android:gravity="right" />

        <EditText
            android:id="@+id/editText_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="id"
            android:inputType="number"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_table5"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:id="@+id/button_add"
        android:layout_weight="1"
        android:padding="3dp"
        android:layout_margin="3dp"
        tools:ignore="ButtonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:id="@+id/button_viewAll"
        android:layout_weight="1"
        android:padding="3dp"
        android:layout_margin="3dp"
        tools:ignore="ButtonStyle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:id="@+id/button_update"
        android:layout_weight="1"
        android:padding="3dp"
        android:layout_margin="3dp"
        tools:ignore="ButtonStyle" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/button_delete"
        android:layout_weight="1"
        android:padding="3dp"
        android:layout_margin="3dp"
        tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>